# meerkat

./: .dockerignore  .gitignore  Dockerfile  FIX_RAPPORT.md  Procfile  README.md  SETUP.md  STAP_3_COMPLEET.md  STAP_3_UPDATE.md  STAP_4_COMPLEET.md  STAP_5_COMPLEET.md  create_test_data.py  db.sqlite3  docker-compose.prod.yml  entrypoint.sh  fix_block.py  fix_block_v2.py  fix_final_tags.py  fix_header.py  fix_spans.py  fix_tail.py  fix_templates.py  fix_templates_v2.py  main.py  pyproject.toml  railway.json  requirements.txt  test_scout.py
collector/: tasks.py  tests_alerts.py
collector/analyzer/: gemini.py
collector/management/commands/: test_celery.py
collector/scanner/: capture.py  full_scan.py  scout.py  test_scout_mock.py
config/: celery.py  settings.py  urls.py
dashboard/: urls.py  views.py
dashboard/templatetags/: dashboard_extras.py
nginx/: nginx.conf
shared/: admin.py  models.py
shared/management/commands/: scan_target.py
shared/migrations/: 0001_initial.py  0002_alert.py
storage/key_value_stores/default/: __CRAWLER_STATISTICS_0  __CRAWLER_STATISTICS_0.__metadata__.json  __RQ_STATE_Pkf0952qSArHI6Plm  __RQ_STATE_Pkf0952qSArHI6Plm.__metadata__.json  __metadata__.json
storage/request_queues/default/: __metadata__.json  ac6bb669e40e44a.json
templates/: base.html  dashboard.html
templates/dashboard/: faq.html  index.html  index.html.backup2  index.html.corrupted  matrix.html
templates/dashboard/help/: faq.html  features.html  getting_started.html  help_base.html  index.html  scans.html  (+1 more)
templates/emails/: alert_email.html  alert_email.txt
