[project]
name = "meerkat"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "crawlee>=1.2.0",
    "dj-database-url>=3.0.1",
    "django>=6.0",
    "google-generativeai>=0.8.5",
    "gunicorn>=23.0.0",
    "lxml>=6.0.2",
    "pillow>=12.0.0",
    "playwright>=1.56.0",
    "psycopg2-binary>=2.9.11",
]
